[package]
name = "pkgcruft"
version = "0.0.18"
description = "QA library and tools based on pkgcraft"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/pkgcruft"
readme = "README.md"
license = "MIT"
autobins = false
autotests = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# test support
test = ["dep:assert_cmd", "dep:glob", "pkgcraft/test"]

[lib]
name = "pkgcruft"

[[bin]]
name = "pkgcruft"
path = "src/bin/main.rs"

[[test]]
name = "pkgcruft"

[[bench]]
name = "bench"
harness = false

[dependencies]
anstream = "1.0.0"
anyhow = "1.0.102"
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive", "string"] }
clap_complete = "4.6.2"
clap-verbosity-flag = "3.0.4"
colorchoice-clap = "1.0.8"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
indexmap = { version = "2.14.0", features = ["rayon", "serde"] }
indoc = "2.0.7"
inventory = "0.3.24"
itertools = "0.14.0"
num_cpus = "1.17.0"
owo-colors = "4.3.0"
pkgcraft = { path = "../pkgcraft", version = "0.0.31" }
rayon = "1.12.0"
regex = "1.12.3"
scallop = { path = "../scallop", version = "0.0.30" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strfmt = "0.2.5"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
tree-sitter = "0.26.8"
url = "2.5.8"
walkdir = "2.5.0"

# exported test support deps
assert_cmd = { version = "2.2.1", optional = true }
glob = { version = "0.3.3", optional = true }

[dev-dependencies]
assert_cmd = { version = "2.2.1" }
camino-tempfile = "1.4.1"
criterion = "0.8"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
tracing-test = "0.2.6"
glob = { version = "0.3.3" }
pkgcraft = { path = "../pkgcraft", version = "0.0.31", features = ["test"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "txz"
disabled-strategies = ["quick-install", "compile"]
