[package]
name = "scallop"
version = "0.0.19"
description = "Wrapper library for bash"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/scallop"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/scallop"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["bash", "shell"]
autotests = false
exclude = [
	"bash/doc/*",
	"bash/examples/*",
	"bash/po/*",
	"bash/tests/*",
]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "scallop"
path = "src/lib.rs"

[[example]]
name = "scallop"

[dependencies]
bitflags = "2.6.0"
indexmap = { version = "2.7.0", features = ["rayon", "serde"] }
ipc-channel = "0.19.0"
libc = "0.2.168"
nix = { version = "0.29.0", features = ["fs", "mman", "process", "signal"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.8"
tracing = "0.1.41"

[build-dependencies]
autotools = "0.2.7"
bindgen = "0.71.1"
camino = "1.1.9"
num_cpus = "1.16.0"

[dev-dependencies]
ctor = "0.2.9"
tempfile = "3.14.0"
