[package]
name = "scallop"
version = "0.0.28"
description = "Wrapper library for bash"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/scallop"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/scallop"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["bash", "shell"]
autotests = false
exclude = [
	"bash/doc/*",
	"bash/examples/*",
	"bash/po/*",
	"bash/tests/*",
]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "scallop"
path = "src/lib.rs"

[[example]]
name = "scallop"

[features]
# external test support
test = []

[dependencies]
bitflags = "2.10.0"
indexmap = { version = "2.12.0", features = ["rayon", "serde"] }
itertools = "0.14.0"
libc = "0.2.177"
nix = { version = "0.30.1", features = ["fs", "mman", "process", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"

[build-dependencies]
autotools = "0.2.7"
bindgen = "0.72.1"
camino = "1.2.1"
num_cpus = "1.17.0"

[dev-dependencies]
ctor = "0.6.0"
tempfile = "3.23.0"
