[package]
name = "scallop"
version = "0.0.30"
description = "Wrapper library for bash"
homepage = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/scallop"
repository = "https://github.com/pkgcraft/pkgcraft/tree/main/crates/scallop"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["bash", "shell"]
autotests = false
exclude = [
	"bash/doc/*",
	"bash/examples/*",
	"bash/po/*",
	"bash/tests/*",
]
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "scallop"
path = "src/lib.rs"

[[example]]
name = "scallop"

[features]
# external test support
test = []

[dependencies]
bitflags = "2.10.0"
indexmap = { version = "2.13.0", features = ["rayon", "serde"] }
humantime = "2.3.0"
itertools = "0.14.0"
libc = "0.2.180"
nix = { version = "0.31.1", features = ["fs", "mman", "process", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"

[build-dependencies]
autotools = "0.2.7"
bindgen = "0.72.1"
camino = "1.2.2"
num_cpus = "1.17.0"
pkg-config = "0.3.32"
regex = "1.12.2"

[dev-dependencies]
ctor = "0.6.3"
indoc = "2.0.7"
regex = "1.12.2"
tempfile = "3.24.0"
